--- a/app/views/bikes/_credibility_score.html.haml
+++ b/app/views/bikes/_credibility_score.html.haml
@@ -1,20 +1,21 @@
 - scorer = bike.credibility_scorer
 .credibility-score{ style: "background: #{credibility_scorer_color(scorer.score)};" }
   .main-crediblity-score-box
-    %a.credibility-title{ href: ".score-details", data: { toggle: "collapse" } }
+    -# %a.credibility-title{ href: ".score-details", data: { toggle: "collapse" } }
+    %span.credibility-title
       Credibility Score
     %span.score-number
       = scorer.score
   .score-details.text-left
-    %small.details-title
+    %em.small.details-title
       Factors in score:
-    %table.table-list
+    %table.table.table-sm.table-striped.table-bordered
       %tbody
         - CredibilityScorer.permitted_badges_hash(scorer.badges).each do |badge, value|
           %tr
             %td
-              %strong{ class: (value < 0 ? "text-danger" : "") }
-                = value
-            %td
               %small
                 = badge.to_s.humanize
+            %td.text-right
+              %span{ class: (value < 0 ? "text-danger" : "") }
+                = value
