--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -5,14 +5,14 @@
   - if current_user.present?
     - if passive_organization.present? && current_user.authorized?(passive_organization) || current_user.superuser
       .row
-        - col_classes = passive_organization&.enabled?("credibility_badges") ? "col-lg-8 col-md-6" : "col-xs-12"
+        - col_classes = passive_organization&.enabled?("credibility_badges") ? "col-md-7" : "col-xs-12"
         .clearfix{ class: col_classes }
           - if current_user.superuser
             = link_to "superadmin", admin_bike_path(@bike.to_param), class: "btn btn-outline-info less-strong superuser-bike-button"
           - if passive_organization.present?
             %h3.secondary-bike-title.mb-2= @bike.title_u
         - if passive_organization&.enabled?("credibility_badges")
-          .col-lg-4.col-md-6.text-right
+          .col-md-5.text-right
             = render partial: "/bikes/credibility_score", locals: { bike: @bike }
 
 
