--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -26,6 +26,8 @@
     = hidden_field_tag :organization_id, passive_organization&.to_param
     = hidden_field_tag :sort, params[:sort]
     = hidden_field_tag :direction, params[:direction]
+    = hidden_field_tag :search_stickers, params[:search_stickers]
+    = hidden_field_tag :search_address, params[:search_address]
 
 %hr{ style: "opacity: .3;" }
 
