--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -27,6 +27,7 @@
             %li= active_link t(".design_logos"), image_resources_path
             %li= active_link t(".security"), security_path
             %li= active_link t(".bike_manufacturer_list"), manufacturers_path
+            %li= active_link t(".protect_your_bike"), protect_your_bike_path
             %li= active_link t(".stolen_bike_map"), "https://map.bikewise.org/"
 
         %nav.col-md-2.pull-right
