banner header still

--- a/app/assets/stylesheets/revised/sections/bikehub_sign_in_up.scss
+++ b/app/assets/stylesheets/revised/sections/bikehub_sign_in_up.scss
@@ -176,52 +176,41 @@ $bikehub-text-color: #212529;
 }
 
 .bikehub {
-  // .bikehub-banner-header {
-  //   background-image: image-url("landing_pages/header_bg_bike_hub.jpg");
-  //   background-size: auto 100%;
-  //   background-position: right center;
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  //   padding: 30px 0;
-  //   border-bottom: 0px;
-  // }
+  .bikehub-banner-header {
+    background-image: image-url("landing_pages/header_bg_bike_hub.jpg");
+    background-size: auto 100%;
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 30px 0;
+    border-bottom: 0px;
+  }
 
-  // .teamed-up-with-bike-index {
-  //   background: white;
-  //   max-width: 675px;
-  //   margin: 0 auto;
-  //   padding-top: 15px;
-  //   padding-bottom: 15px;
-  //   h1 {
-  //     font-size: 18px;
-  //     font-weight: bold;
-  //     color: $bikehub-green;
-  //     text-align: center;
-  //   }
-  //   img {
-  //     max-width: 100px;
-  //     height: auto;
-  //   }
-  //   p {
-  //     font-size: 12px;
-  //     &:last-of-type {
-  //       margin-bottom: 0;
-  //     }
-  //   }
-  //   .team-title-box {
-  //     @include media-breakpoint-down(md) {
-  //       display: flex;
-  //       padding-bottom: 20px;
-  //       h1,
-  //       .high-five-wrapper {
-  //         flex: 0 0 50%;
-  //       }
-  //       h1 {
-  //         padding-top: 36px;
-  //       }
-  //     }
-  //   }
-  // }
+  .teamed-up-with-bike-index {
+    @extend .clearfix;
+    background: white;
+    max-width: 675px;
+    margin: 0 auto;
+    padding: 15px;
+    h1 {
+      @extend .uncap;
+      font-size: 18px;
+      font-weight: normal;
+      color: $bikehub-green;
+      margin: 0.5rem 0 1rem;
+    }
+    .bikehub-high-five {
+      max-width: 100px;
+      height: auto;
+      float: right;
+    }
+    p {
+      font-size: 12px;
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+  }
 
   .bikehub-top-info {
     @extend .clearfix;
