--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -7,28 +7,26 @@
     .sign-in-up-wrap
       .row
         .oauth-providers
-          / %a.facebook-login{ href: '/auth/facebook' }
-          /   %span.oauth-logo-block= image_tag 'revised/facebook_login.svg'
-          /   %span.oauth-text-block= t(".sign_up_using_facebook")
-
-          / %a.strava-login{ href: '/auth/strava' }
-          /   %span.oauth-logo-block= image_tag 'revised/strava_login.svg'
-          /   %span.oauth-text-block= t(".sign_up_using_strava")
-          - unless sign_in_partner.present?
-            %a.globalid-login{ href: '/auth/globalid' }
-              %span.oauth-logo-block= image_tag 'revised/globalid_logo.svg'
-              %span.oauth-text-block= t(".sign_up_using_globalid")
+          -# %a.facebook-login{ href: '/auth/facebook' }
+          -#   %span.oauth-logo-block= image_tag 'revised/facebook_login.svg'
+          -#   %span.oauth-text-block= t(".sign_up_using_facebook")
+          -# %a.strava-login{ href: '/auth/strava' }
+          -#   %span.oauth-logo-block= image_tag 'revised/strava_login.svg'
+          -#   %span.oauth-text-block= t(".sign_up_using_strava")
+          -# %a.globalid-login{ href: '/auth/globalid' }
+          -#   %span.oauth-logo-block= image_tag 'revised/globalid_logo.svg'
+          -#   %span.oauth-text-block= t(".sign_up_using_globalid")
         .sign-in-up-or
-          / %h3= t(".or")
+          -# %h3= t(".or")
         .main-form
           %h3.sign-in-up-main-form-header
-            = t(".sign_up")
             %small
               - if sign_in_partner.present?
                 = t(".already_have_a_bike_index_account")
               - else
                 = t(".already_have_an_account")
               = link_to t(".log_in"), new_session_path(partner: sign_in_partner, email: params[:email])
+            = t(".sign_up")
 
           = form_for @user do |f|
             - if sign_in_partner
