--- a/app/assets/stylesheets/revised/emails/email_sections.scss
+++ b/app/assets/stylesheets/revised/emails/email_sections.scss
@@ -63,6 +63,8 @@
       float: left;
       line-height: 1;
       margin: 17px 12px 0;
+      display: block;
+      content: "+";
     }
 
     .partner-header-logo {
