--- a/app/assets/stylesheets/revised/sections/bikehub_sign_in_up.scss
+++ b/app/assets/stylesheets/revised/sections/bikehub_sign_in_up.scss
@@ -177,12 +177,6 @@ $bikehub-text-color: #212529;
 
 .bikehub {
   .bikehub-banner-header {
-    background-image: image-url("landing_pages/header_bg_bike_hub.jpg");
-    background-size: auto 100%;
-    background-position: right center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 30px 0;
     border-bottom: 0px;
   }
 
@@ -194,17 +188,20 @@ $bikehub-text-color: #212529;
     padding: 15px;
     h1 {
       @extend .uncap;
-      font-size: 18px;
       font-weight: normal;
       color: $bikehub-green;
-      margin: 0.5rem 0 0;
+      margin: 0.5rem 0 0.5rem;
       line-height: 1.5;
+      font-size: 30px;
     }
     .bikehub-high-five {
       max-width: 100px;
       height: auto;
       float: right;
       margin-left: 1rem;
+    }
+    p {
+      margin-bottom: 0;
     }
   }
 
@@ -235,13 +232,33 @@ $bikehub-text-color: #212529;
     }
   }
 }
-@media (min-width: $grid-breakpoint-lg) {
-  .bikehub .teamed-up-with-bike-index strong {
-    display: block;
+@media (max-width: $grid-breakpoint-md) {
+  .bikehub .teamed-up-with-bike-index h1 {
+    font-size: 18px;
   }
 }
-@media (max-width: 450px) {
-  .bikehub .teamed-up-with-bike-index .bikehub-high-five {
-    max-width: 50px;
+
+@media (max-width: 501px) {
+  .bikehub .teamed-up-with-bike-index {
+    padding-bottom: 0;
+    .bikehub-high-five {
+      max-width: 50px;
+    }
+    p {
+      clear: both;
+    }
+  }
+}
+
+@media (min-width: 500px) {
+  .bikehub {
+    .bikehub-banner-header {
+      background-image: image-url("landing_pages/header_bg_bike_hub.jpg");
+      background-size: auto 100%;
+      background-position: right center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 30px 0;
+    }
   }
 }
