--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -9,15 +9,14 @@
         .oauth-providers
           -# %a.facebook-login{ href: '/auth/facebook' }
           -#   %span.oauth-logo-block= image_tag 'revised/facebook_login.svg'
-          -#   %span.oauth-text-block= t(".sign_up_using_facebook")
+          /    %span.oauth-text-block= t(".sign_up_using_facebook")
           -# %a.strava-login{ href: '/auth/strava' }
           -#   %span.oauth-logo-block= image_tag 'revised/strava_login.svg'
-          -#   %span.oauth-text-block= t(".sign_up_using_strava")
+          /   %span.oauth-text-block= t(".sign_up_using_strava")
           -# %a.globalid-login{ href: '/auth/globalid' }
           -#   %span.oauth-logo-block= image_tag 'revised/globalid_logo.svg'
-          -#   %span.oauth-text-block= t(".sign_up_using_globalid")
+          /   %span.oauth-text-block= t(".sign_up_using_globalid")
         .sign-in-up-or
-          -# %h3= t(".or")
         .main-form
           %h3.sign-in-up-main-form-header
             %small
