--- a/app/views/layouts/application_bikehub.html.haml
+++ b/app/views/layouts/application_bikehub.html.haml
@@ -46,32 +46,27 @@
                 %a.nav-link{ href:  new_session_path(partner: sign_in_partner), class: (signup_page ? "" : "active") }
                   = t(".login")
 
-      .bikehub-signup-landing-page.bikehub-signup-page.landing-page
+      .landing-page
         %header.bikehub-banner-header
-          .row.teamed-up-with-bike-index.text-center
-            .col-lg-4.team-title-box
-              %h1
-                = t(".teamed_up")
-              %span.high-five-wrapper
-                = image_tag "bikehub/high-five.svg", alt: "High Five"
-            .col-lg-8
-              %p
-                = t(".non_profit")
-              %p
-                = t(".partnership")
-      .bike-hub-login.mt-4
-        %h2
-          = t(".accounts_powered_by_bike_index")
-          %br
-          - if signup_page
-            = t(".sign_up_message")
-          - else
-            = t(".log_in_message")
+          .teamed-up-with-bike-index
+            = image_tag "bikehub/high-five.svg", alt: "Bikehub and Bike Index together", class: "bikehub-high-five"
+            %h1= t(".teamed_up")
+            %p
+              = t(".accounts_powered_by_bike_index")
 
 
       = render "layouts/revised_messages"
+      .mt-4
       = yield
-
+      .container-fluid
+        .row
+          .col-xl-8.offset-xl-2.col-md-10.offset-md-1.bikehub-bottom-info
+            %p
+              %em
+                = t(".non_profit")
+            %p
+              %em
+                = t(".partnership")
 
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
