--- a/app/views/landing_pages/ambassadors_how_to.html.haml
+++ b/app/views/landing_pages/ambassadors_how_to.html.haml
@@ -92,7 +92,7 @@
       .next-steps-col
         .next-steps-wrap
           .trusted-by
-            %h3
+            %h3.uncap
               = t(".become_an_ambassador")
             %ul
               %li
