Minor ambassador text update (#1735)

--- a/app/views/landing_pages/ambassadors_how_to.html.haml
+++ b/app/views/landing_pages/ambassadors_how_to.html.haml
@@ -43,8 +43,6 @@
           %li
             = t(".access_to_ambassadors_slack_channel_for_s")
           %li
-            = t(".a_basic_package_of_materials_including_a_")
-          %li
             = t(".give_you_shoutouts_on_social_media")
 
         %p
@@ -94,7 +92,7 @@
       .next-steps-col
         .next-steps-wrap
           .trusted-by
-            %h3
+            %h3.uncap
               = t(".become_an_ambassador")
             %ul
               %li
