--- a/app/views/admin/parking_notifications/index.html.haml
+++ b/app/views/admin/parking_notifications/index.html.haml
@@ -8,12 +8,12 @@
         %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_status == "all" ? "" : "active") }
           #{@search_status.humanize} notifications
         .dropdown-menu
-          - (["all"] + ParkingNotification.statuses).each do |kind|
+          - (%w[all resolved active] + ParkingNotification.statuses).each do |kind|
             - kind_active = @search_status == kind
             - kind_link_params = sortable_search_params.merge(search_status: (kind_active ? nil : kind))
             - kind_display = "#{kind.humanize} notifications"
             = link_to kind_display, admin_parking_notifications_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
-            - if kind == "all" # Add a divider after all
+            - if kind == "active" # Add a divider after active
               .dropdown-divider
       %li.nav-item
         = link_to "graph", admin_parking_notifications_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
