--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -68,7 +68,7 @@
                 Impounded:
               - if parking_notification.retrieved?
                 Retrieved:
-              %small.convertTime.preciseTime
+              %small.convertTime
                 = l(parking_notification.resolved_at, format: :convert_time)
 
         - if render_address
@@ -96,10 +96,14 @@
         - unless skip_resolved
           %td.hidden-sm-cells.status-cell
             - if parking_notification.impound_record_id.present?
-              %a.convertTime.preciseTime{ href: organization_impound_record_path("pkey-#{parking_notification.impound_record_id}", organization_id: parking_notification.organization_id) }
-                = l(parking_notification.resolved_at, format: :convert_time)
+              - resolved_at = parking_notification.calculated_resolved_at
+              %a.small{ href: organization_impound_record_path("pkey-#{parking_notification.impound_record_id}", organization_id: parking_notification.organization_id), class: (resolved_at.present? ? "convertTime" : "") }
+                - if resolved_at.present?
+                  = l(resolved_at, format: :convert_time)
+                - else
+                  impounded
             - elsif parking_notification.resolved_at.present?
-              %span.convertTime.preciseTime
+              %small.convertTime
                 = l(parking_notification.resolved_at, format: :convert_time)
 
         - unless skip_multiselect
