--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -40,6 +40,8 @@
             .form-group
               = f.label :password, class: 'sr-only'
               = f.password_field :password, placeholder: 'password', class: 'form-control'
+              .password-help-text
+                = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/"))
 
             .checkbox.terms-and-conditions
               %label
