--- a/app/views/users/_edit_password.html.haml
+++ b/app/views/users/_edit_password.html.haml
@@ -10,6 +10,8 @@
     = f.label :password, t(".new_password"), class: 'form-well-label'
     .form-well-input
       = f.password_field :password, placeholder: t(".new_password"), class: 'form-control'
+      .password-help-text
+        = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/"))
   .form-group.row.unnested-field
     = f.label :password_confirmation, t(".new_password_confirmation"), class: 'form-well-label'
     .form-well-input
