--- a/app/views/users/_edit_password.html.haml
+++ b/app/views/users/_edit_password.html.haml
@@ -11,7 +11,7 @@
     .form-well-input
       = f.password_field :password, placeholder: t(".new_password"), class: 'form-control'
       .password-help-text
-        = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/"))
+        = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/", tabindex: -1))
   .form-group.row.unnested-field
     = f.label :password_confirmation, t(".new_password_confirmation"), class: 'form-well-label'
     .form-well-input
