--- a/app/views/admin/bikes/_table.html.haml
+++ b/app/views/admin/bikes/_table.html.haml
@@ -3,7 +3,7 @@
 - show_serial ||= params[:show_serial].present?
 - render_sortable ||= false
 
-- unless current_user.developer?
+- unless current_user.developer? && params[:hide_dev].blank?
   <style>.bikeTable .only-dev-visible { display: none !important; }</style>
 .full-screen-table
   %table.table.table-striped.table-bordered.table-sm.bikeTable{ class: show_serial ? "show-admin-bike-table-serial-cell" : "" }
@@ -45,6 +45,9 @@
                       = bike.id
                   - else
                     = bike.id
+              - if bike.deleted?
+                .small.text-danger
+                  Deleted&nbsp;<span class="convertTime">#{l bike.deleted_at, format: :convert_time}</span>
             %td.d-none.d-md-table-cell
               = bike.owner_email
               - if bike.user?
