--- a/app/views/users/update_password.html.haml
+++ b/app/views/users/update_password.html.haml
@@ -9,6 +9,8 @@
         %label{ for: "user_Password" }
           = t(".update_your_password")
           = f.password_field :password, placeholder: t(".password"), class: 'form-control'
+      .password-help-text
+        = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/"), tabindex: -1)
       .form-group
         %label{ for: "user_password_confirmation" }
           = t(".password_confirmation")
