--- a/app/views/organized/impound_records/index.html.haml
+++ b/app/views/organized/impound_records/index.html.haml
@@ -7,7 +7,7 @@
 - if @render_chart
   = column_chart time_range_counts(collection: available_impound_records), stacked: true, thousands: ",", defer: true
 .text-right.mb-2
-  %a.btn.btn-sm.less-strong.btn-outline-secondary{ href: organization_impound_records_path(sortable_search_params.merge(organization_id: current_organization.to_param, render_chart: !@render_chart)), class: (@render_chart ? "active" : "") }
+  %a.btn.btn-sm.less-strong.btn-outline-secondary{ href: organization_impound_records_path(sortable_search_params.merge(render_chart: !@render_chart)), class: (@render_chart ? "active" : "") }
     Render chart
 = render partial: "/shared/period_select"
 
@@ -31,7 +31,6 @@
         :plain
           <svg id="search-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><defs><style>.cls-1,.cls-2{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}.cls-2{stroke-linecap:round;}</style></defs><title>searcher</title><circle class="cls-1" cx="10.39" cy="10.39" r="9.39"/><line class="cls-2" x1="17.03" y1="17.03" x2="28" y2="28"/></svg>
     = hidden_field_tag :stolenness, @stolenness
-    = hidden_field_tag :organization_id, passive_organization&.to_param
 
     = hidden_field_tag :period, params[:period]
     = hidden_field_tag :start_time, params[:start_time]
