--- a/app/views/organized/appointments/index.html.haml
+++ b/app/views/organized/appointments/index.html.haml
@@ -5,7 +5,7 @@
     Appointments
 
 - if @render_chart
-  = column_chart time_range_counts(collection: available_appointments), stacked: true, thousands: ",", defer: true
+  = column_chart time_range_counts(collection: matching_appointments), stacked: true, thousands: ",", defer: true
 .text-right.mb-2
   %a.btn.btn-sm.less-strong.btn-outline-secondary{ href: organization_appointments_path(sortable_search_params.merge(render_chart: !@render_chart)), class: (@render_chart ? "active" : "") }
     Render chart
