--- a/app/javascript/stylesheets/appointments/_operate_line.scss
+++ b/app/javascript/stylesheets/appointments/_operate_line.scss
@@ -34,9 +34,11 @@
     }
   }
 
+  // Little bit to make easier for phone view planning
+  background: #ccc;
   #organized-virtual-line-wrapper {
     max-width: 900px;
-    margin: 0 auto;
+    margin: 30px auto;
     background: #fff;
     padding: 1rem 0;
   }
