--- a/app/views/organized/operate_lines/show.html.haml
+++ b/app/views/organized/operate_lines/show.html.haml
@@ -3,11 +3,12 @@
   %head
     = header_tags
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,700' rel='stylesheet' type='text/css'>
-    = javascript_pack_tag "application_standalone"
     = stylesheet_pack_tag "application_css"
   %body{ id: page_id, class: "organized-virtual-line-body"  }
     -# TODO translations
-    = javascript_pack_tag "operate_line/index"
+    :javascript
+      window.customers = #{@serialized_appointments.to_json};
+    = javascript_pack_tag "operate_line/show"
     #organized-virtual-line-wrapper
       - if @appointments.any?
         %h2
@@ -20,25 +21,10 @@
           %a{ href: "#", "data-toggle" => "modal", "data-target" => "#setNextTicketModal"  }
             Set first ticket in line
 
-      #operateLineJSView
+      = render "customer_template"
 
-      -# - @appointments.paging_or_on_deck.each do |ticket|
-      -#   .ticket-row.on-deck-ticket
-      -#     %a.remove{ href: "#" }
-      -#       X
-      -#     %h4
-      -#       = ticket.number
-      -#     %a.help{ href: "#" }
-      -#       = check_mark
-      -# %h2 Upcoming
-      -# - @appointments.line_not_paging_or_on_deck.each do |ticket|
-      -#   .ticket-row
-      -#     %a.remove{ href: "#" }
-      -#       X
-      -#     %h4
-      -#       = ticket.number
-      -#     %a.help{ href: "#" }
-      -#       = check_mark
+      #nextTicketsToHelp
+
     .modal.fade#setNextTicketModal{ role: "dialog" }
       .modal-dialog{ role: "document" }
         .modal-content
