basically finished with functionality update

--- a/app/views/users/update_password_form_with_reset_token.html.haml
+++ b/app/views/users/update_password_form_with_reset_token.html.haml
@@ -4,7 +4,7 @@
     %p (#{t(".and_try_not_to_forget_it")})
 
     = form_for @user, html: { class: "form-horizontal form" } do |f|
-      = f.hidden_field :password_reset_token, value: params[:token]
+      = hidden_field_tag :token, value: @token
       .form-group
         %label{ for: "user_Password" }
           = t(".update_your_password")
