--- a/app/views/users/update_password_form_with_reset_token.html.haml
+++ b/app/views/users/update_password_form_with_reset_token.html.haml
@@ -1,19 +1,22 @@
 .container
-  .choose-a-new-pass
-    %h3= t(".choose_a_new_password")
-    %p (#{t(".and_try_not_to_forget_it")})
+  %h3.mb-0= t(".choose_a_new_password")
+  %p.mt-2.less-strong (#{t(".and_try_not_to_forget_it")})
 
-    = form_for @user, html: { class: "form-horizontal form" } do |f|
-      = hidden_field_tag :token, value: @token
-      .form-group
-        %label{ for: "user_Password" }
-          = t(".update_your_password")
+  = form_for @user, url: "/users/update_password_with_reset_token", method: :post, html: { class: "form" } do |f|
+    = hidden_field_tag :token, @token
+    .row
+      .col-sm-6
+        .form-group
+          %label.mb-0{ for: "user_Password" }
+            = t(".update_your_password")
           = f.password_field :password, placeholder: t(".password"), class: 'form-control'
-      .password-help-text
-        = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/", tabindex: -1))
-      .form-group
-        %label{ for: "user_password_confirmation" }
-          = t(".password_confirmation")
+          .password-help-text
+            = t(".password_helper_text_html", better_password_link: link_to(t(".better_password"), "https://xkcd.com/936/", tabindex: -1))
+      .col-sm-6
+        .form-group
+          %label.mb-0{ for: "user_password_confirmation" }
+            = t(".password_confirmation")
           = f.password_field :password_confirmation, placeholder: t(".password_confirmation"), class: 'form-control'
-      .actions
-        = f.submit t(".update_password"), class: 'btn btn-primary btn-lg'
+      .col-sm-12
+        .actions
+          = f.submit t(".update_password"), class: 'btn btn-primary btn-lg'
